# coinswap-py

./: .gitignore  README.md  ffi-docker-setup  pyproject.toml
build-scripts/: build-release-linux-aarch64.sh  build-release-linux-x86_64.sh  build-release-macos-aarch64.sh  build-release-macos-x86_64.sh
src/coinswap/: __init__.py  qt_app.py  wrapper.py
